--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>自配电脑价格计算器</title>
 	<link rel="stylesheet" href="style.css" />
+	<script src="scripts.js"></script>
 </head>
 <body>
 	<div>
@@ -21,7 +22,7 @@
 		<P>您的其他要求:</P>
 		<textarea id="其他要求" placeholder="描述您的其他需求,如硬盘品牌等,有概率失效"></textarea><br />
 		<input type="button" value="确定" /><br />
-		<p></p>
+		<p id="提示"></p>
 		<progress value="0" max="100"></progress>
 	</div>
 	
